@@ -34,5 +34,11 @@ The interface to the library is documented in the include file
 file <code>readtags.c</code>.
 </p>
 
+<p>
+To facilitate widespread support of tag files, the readtags library is
+released in the public domain, allowing its use in even commercial
+applications.
+</p>
+
 </body>
 </html>
